<resources>
    <string name="app_name">Scientific calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="Zero">0</string>

    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="parenthesis">()</string>
    <string name="Divide">/</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="multiplication">*</string>
    <string name="PlusAndMinus">+/-</string>
    <string name="Point">.</string>
    <string name="Equals">=</string>

    <string name="BackSpace"> </string>

    <string name="display">Enter in a value</string>
</resources>